# osrepo

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  busybox  busybox_res.txt  iperf_log.txt  libctest.txt  log.txt  ltp.txt  ltp_log.txt  nteperf_log.txt  run-all-test.sh  rust-toolchain.toml  test.sh
busybox/: Config.in  busybox  busybox_unstripped.map  busybox_unstripped.out
docs/: TODOs.md  个人开发记录.md  初赛文档.md  开发bug记录.md  文件系统.md
os/: Cargo.toml  Makefile  basic_result.txt  build.rs  busybox_result.txt  linker.lds  linker_loongarch64.lds  linker_riscv64.lds  linker_x86_64.lds  run_testcases_musl.sh
os/.cargo/: config.toml
os/cargo/: config.toml
os/libs/ext4_rs/: buginfo.md
os/libs/ext4_rs/src/: lib.rs  main.rs
os/libs/ext4_rs/src/ext4_defs/: block.rs  block_group.rs  consts.rs  direntry.rs  ext4.rs  extents.rs  file.rs  inode.rs  super_block.rs
os/libs/ext4_rs/src/ext4_impls/: balloc.rs  dir.rs  ext4.rs  extents.rs  file.rs  ialloc.rs  inode.rs
os/libs/ext4_rs/src/fuse_interface/: mod.rs
os/libs/lwext4_rsut/: Cargo.toml
os/libs/lwext4_rsut/c/lwext4/: CMakeLists.txt
os/libs/lwext4_rsut/c/lwext4/include/: ext4.h  ext4_inode.h
os/libs/lwext4_rsut/c/lwext4/src/: ext4.c  ext4_inode.c
os/libs/lwext4_rsut/examples/src/: ext4fs.rs
os/libs/lwext4_rsut/src/: file.rs
os/libs/polyhal/polyhal/src/components/: common.rs
os/libs/polyhal/polyhal/src/components/timer/: mod.rs
os/libs/polyhal/polyhal/src/pagetable/: loongarch64.rs  mod.rs  riscv64.rs
os/libs/smoltcp/src/iface/interface/: udp.rs
os/libs/virtio-drivers/src/: blk.rs
os/src/: boot.rs  config.rs  console.rs  info.rs  lang_items.rs  linker_la.ld  linker_rv.ld  loongarch.rs  main.rs  sbi.rs  system.rs  timer.rs  trap.rs
os/src/boards/: qemu.rs
os/src/buffers/: bio.rs  mod.rs
os/src/drivers/: blk.rs  disk.rs  mod.rs
os/src/drivers/block/: mod.rs  pci_virtio_blk.rs  ram_blk.rs  virtio_blk.rs
os/src/drivers/virtio/: blk.rs  mod.rs  net.rs
os/src/ext4/: block_cache.rs  dentry.rs  disk.rs  fs.rs  inode.rs  mod.rs  superblock.rs
os/src/fs/: defs.rs  dentry.rs  devfs.rs  dirent.rs  file.rs  fsidx.rs  fstruct.rs  initproc_la.S  inode.rs  mod.rs  path.rs  pipe.rs  run_testcases.S  stat.rs  stdio.rs  vfs.rs
os/src/fs/easyfs/: inode.rs  mod.rs
os/src/fs/ext4/: fs.rs  inode.rs  mod.rs
os/src/fs/ext4_lw/: inode.rs  sb.rs
os/src/fs/net/: mod.rs  port.rs  simple_net.rs  socket.rs  tcp.rs  udp.rs
os/src/fs/vfs/: inode.rs  mod.rs  sockfs.rs
os/src/hal/: entry.asm  mod.rs
os/src/hal/arch/: info.rs  loongarch.rs  mod.rs
os/src/hal/trap/: context.rs  mod.rs  trap.rs  trap_la.s  trap_rv.s
os/src/hal/utils/: console.rs  mod.rs
os/src/loaders/: flags.rs  init_info.rs  init_stack.rs  mod.rs
os/src/mm/: addr_range.rs  address.rs  frame_allocator.rs  group.rs  heap_allocator.rs  map_area.rs  memory_set.rs  mod.rs  page_fault_handler.rs  page_table.rs  shm.rs
os/src/mm/system_allocator/: bump_allocator.rs  mod.rs
os/src/net/: connection.rs  connection_err.rs  mod.rs  port_generator.rs  socket.rs  socket_impl.rs  tcp.rs  udp.rs
os/src/net/socket/: dns.rs  listen_table.rs  loopback.rs  macros.rs  mod.rs  tcp.rs  udp.rs
os/src/signal/: mod.rs  sig_handle.s  signal.rs
os/src/sync/: banker_algo.rs  condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
os/src/syscall/: fs.rs  mem.rs  mod.rs  net.rs  options.rs  process.rs  signal.rs  sync.rs  sys_result.rs  thread.rs  tid.rs  uname.rs
os/src/task/: alloc.rs  aux.rs  context.rs  futex.rs  id.rs  initproc_la.S  initproc_rv.S  manager.rs  mod.rs  process.rs  processor.rs  signal.rs  stride.rs  switch.rs  switch_la.s  task.rs
os/src/trap/: context.rs  mod.rs
os/src/users/: group.rs  id.rs  users.rs
os/src/utils/: error.rs  hart.rs  mod.rs  string.rs
(+949 files in other folders)
