[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
buddy_system_allocator = "0.11.0"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece50" }
easy-fs = { path = "../easy-fs" }

polyhal = { version = "0.3.2", features = ["trap"] }
polyhal-boot = "0.3.2"
polyhal-trap = "0.3.2"
fdt = "0.1.5"
lazyinit = "0.2.1"
