[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
virtio-drivers = "0.6.0"
spin = "0.10"
bit_field = "0.10.1"
lwext4_rust= { path = "./libs/lwext4_rsut"}
lru = "0.12"
hashbrown = "0.12.0"
num_enum = { version = "0.7.2", default-features = false }
polyhal = { path = "./libs/polyhal/polyhal", features = ["trap"] }
polyhal-boot = { path = "./libs/polyhal/polyhal-boot" }
polyhal-trap = { path = "./libs/polyhal/polyhal-trap" }
buddy_system_allocator = "0.11.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "0.10.1"}

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongarch64 = { version = "*", package = "loongArch64" }


[profile.dev]
debug = true

[profile.release]
debug = true

