[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4"
bitflags = "1.2.1"
xmas-elf = "0.7.0"
# old version: virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
# virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece50" }
virtio-drivers = "0.6.0"
spin = "0.10"
bit_field = "0.10.1"
#ext4_rs = { path = "libs/ext4_rs" }
lwext4_rust= { path = "./libs/lwext4_rsut"}
lru = "0.12"
hashbrown = "0.12.0"
num_enum = { version = "0.7.2", default-features = false }

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { version = "*", features = ["inline-asm"] }
buddy_system_allocator = "0.6"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
loongarch64 = { version = "*", package = "loongArch64" }
buddy_system_allocator = "0.11.0"


[profile.dev]
debug = true

[profile.release]
debug = true

