[package]
name = "lwext4_rust"
authors = ["Luoyuan Xiao <xiaoluoyuan@163.com>"]
version = "0.2.0"
edition = "2018"
license = "GPL-2.0"
repository = "https://github.com/elliott10/lwext4_rust"
description = "lwext4 in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

links = "lwext4"
build = "build.rs"

[features]
default = ["print","board_qemu"]
# default = ["print","board_ramdisk"]
print = ["printf-compat"]

board_qemu = []
board_vf2 = []
board_ramdisk = []

[dependencies]
log = "0.4"
printf-compat = { version = "0.1", default-features = false, optional = true }
spin = "0.9.8"
hashbrown = "0.12.0"

[profile.release]
debug = false

#[build-dependencies]
#[target.'cfg(unix)'.build-dependencies]
#bindgen = "0.69"
